# dz-prime

./: Cargo.toml  README.md  compose.yaml  example.env
migration/: 0001_settings_and_tasks.sql
migrations/: 0001_settings_and_tasks.sql  0002_dm_channel_ids.sql
src/: bot.rs  database.rs  jobs.rs  main.rs  model.rs  scheduler.rs  time.rs  time_parse.rs
